--- a/pom.xml
+++ b/pom.xml
@@ -5,23 +5,17 @@
     <artifactId>KitPvP</artifactId>
     <version>1.0</version>
 
-
     <build>
+        <defaultGoal>clean install</defaultGoal>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
                     <target>1.8</target>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>1.16.16</version>
-                        </path>
-                    </annotationProcessorPaths>
+                    <source>1.8</source>
                 </configuration>
             </plugin>
         </plugins>
@@ -40,9 +34,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>pt.foxspigot</groupId>
-            <artifactId>foxspigot</artifactId>
-            <version>1.0</version>
+            <groupId>pt.foxspigot.jar</groupId>
+            <artifactId>FoxSpigot</artifactId>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/FoxSpigot-v0.5.9-Cracked-HotFix.jar</systemPath>
         </dependency>
@@ -63,27 +57,14 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>PlaceHolderAPI</artifactId>
-            <version>1.0</version>
+            <version>2.10.9</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/PlaceholderAPI-2.10.9 (1).jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>main.java</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/lombok-1.16.16.jar</systemPath>
+            <systemPath>${project.basedir}/lib/PlaceholderAPI-2.10.9.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sk89q.worldedit</groupId>
-            <artifactId>worldedit-bukkit</artifactId>
-            <version>6.1.5</version>
-            <scope>provided</scope>
+            <version>1.18.22</version>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
@@ -107,7 +88,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>LATEST</version>
+            <version>2.8.9</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
