--- a/.github/workflows/maven-artifact.yml
+++ b/.github/workflows/maven-artifact.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          lfs: true
       - uses: actions/cache@v2.1.4
         with:
           path: |
