--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,10 @@
             <id>S01 Sonatype Snapshots</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
         </repository>
+        <repository> <!--Particles-->
+            <id>sonatype-nexus-releases</id>
+            <url>https://repo.inventivetalent.org/content/repositories/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -188,5 +192,11 @@
             <version>1.3.2</version>
             <scope>compile</scope>
         </dependency>
+        <!--Shaded Deps-->
+        <!--<dependency>
+            <groupId>org.inventivetalent</groupId>
+            <artifactId>particleapi</artifactId>
+            <version>2.1.2</version>
+        </dependency>-->
     </dependencies>
 </project>
