--- a/src/main/resources/kits.yml
+++ b/src/main/resources/kits.yml
@@ -1,183 +1,374 @@
+# The permission of a kit is soupland.kit.<kitname>
+
 Kits:
   Archer:
     description:
-      - ""
-      - "&7Special bow that deals scaling"
-      - "&7damage base on distance."
-      - ""
+      - ''
+      - '&7Special bow that deals scaling'
+      - '&7damage base on distance.'
+      - ''
+    name: '&dArcher'
+    display-item: BOW
+    credits: 4200
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Assassin:
     description:
-      - ""
-      - "&7Get a sword that deals a massive amount"
-      - "&7of damage, but only have 1 use."
-      - ""
+      - ''
+      - '&7Get a sword that deals a massive amount'
+      - '&7of damage, but only have 1 use.'
+      - ''
+    name: '&aAssassin'
+    display-item: IRON_SWORD
+    credits: 8100
+    cooldown: 45s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Backstab:
     description:
-      - ""
-      - "&7Use your &6GOLDEN SWORD &7to"
-      - "&7backstab people (does 8+ hearts)."
-      - ""
+      - ''
+      - '&7Use your &6GOLDEN SWORD &7to'
+      - '&7backstab people (does 8+ hearts).'
+      - ''
+    name: '&bBackstab'
+    display-item: GOLD_SWORD
+    credits: 2500
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Bat:
     description:
-      - ""
-      - "&7Surround your enemies with"
-      - "&7strong Bats."
-      - ""
+      - ''
+      - '&7Surround your enemies with'
+      - '&7strong Bats.'
+      - ''
+    name: '&aBat'
+    display-item: REDSTONE_TORCH_ON
+    credits: 1950
+    cooldown: 15s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Berserker:
     description:
-      - ""
-      - "&7Every kill you get, you receive a positive effect."
-      - ""
+      - ''
+      - '&7Every kill you get, you receive a positive effect.'
+      - ''
+    name: '&bBerserker'
+    display-item: POTION
+    credits: 5300
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Cactus:
     description:
-      - ""
-      - "&7Deal damage to enemies"
-      - "&7when you are being hit."
-      - ""
+      - ''
+      - '&7Deal damage to enemies'
+      - '&7when you are being hit.'
+      - ''
+    name: '&2Cactus'
+    display-item: CACTUS
+    credits: 4600
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Chemist:
     description:
-      - ""
-      - "&7Slow down your enemies with poison or"
-      - "&7take them down with damage pots that"
-      - "&7refill upon kills."
-      - ""
+      - ''
+      - '&7Slow down your enemies with poison or'
+      - '&7take them down with damage pots that'
+      - '&7refill upon kills.'
+      - ''
+    name: '&aChemist'
+    display-item: POTION
+    credits: 4300
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Dragon:
     description:
-      - ""
-      - "&7Shoot fire and fury"
-      - "&7onto your enemies."
-      - ""
+      - ''
+      - '&7Shoot fire and fury'
+      - '&7onto your enemies.'
+      - ''
+    name: '&cDragon'
+    display-item: BLAZE_POWDER
+    credits: 5450
+    cooldown: 30s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Falcon:
     description:
-      - ""
-      - "&7Gain a feather that allows you to fly,"
-      - "&7If you are hit, you will fall."
-      - ""
+      - ''
+      - '&7Gain a feather that allows you to fly,'
+      - '&7If you are hit, you will fall.'
+      - ''
+    name: '&bFalcon'
+    display-item: FEATHER
+    credits: 6900
+    cooldown: 10s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Fighter:
     description:
-      - ""
-      - "&7Use your Health Package"
-      - "&7and fight free vs. your opponents."
-      - ""
+      - ''
+      - '&7Use your Health Package'
+      - '&7and fight free vs. your opponents.'
+      - ''
+    name: '&aFighter'
+    display-item: ENDER_CHEST
+    credits: 7800
+    cooldown: 12s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Fireman:
     description:
-      - ""
-      - "&7No fire damage."
-      - ""
+      - ''
+      - '&7No fire damage.'
+      - ''
+    name: '&cFireman'
+    display-item: LAVA_BUCKET
+    credits: 6300
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Fisherman:
     description:
-      - ""
-      - "&7Get a fishing rod that you can use to"
-      - "&7teleport enemies to you."
-      - "&7Just catch them with your rod."
-      - ""
+      - ''
+      - '&7Get a fishing rod that you can use to'
+      - '&7teleport enemies to you.'
+      - '&7Just catch them with your rod.'
+      - ''
+    name: '&dFisherman'
+    display-item: FISHING_ROD
+    credits: 4300
+    cooldown: 25s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Ironman:
     description:
-      - ""
-      - "&7Reduce damage by 5-20%."
-      - ""
+      - ''
+      - '&7Reduce damage by 5-20%.'
+      - ''
   Jester:
     description:
-      - ""
-      - "&7Troll your enemies with a lot of Trolls."
-      - ""
+      - ''
+      - '&7Troll your enemies with a lot of Trolls.'
+      - ''
+    name: '&6Jester'
+    display-item: DIAMOND_HOE
+    credits: 5200
+    cooldown: 30s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Kangaroo:
     description:
-      - ""
-      - "&7Get a rocket that will launch"
-      - "&7you in the way you are looking."
-      - ""
+      - ''
+      - '&7Get a rocket that will launch'
+      - '&7you in the way you are looking.'
+      - ''
+    name: '&cKangaroo'
+    display-item: FIREWORK
+    credits: 4100
+    cooldown: 20s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Mario:
     description:
-      - ""
-      - "&7Shoot your enemies with fireballs"
-      - "&7that refill with every kill you get."
-      - ""
+      - ''
+      - '&7Shoot your enemies with fireballs'
+      - '&7that refill with every kill you get.'
+      - ''
+    name: '&cMario'
+    display-item: FIREBALL
+    credits: 5100
+    cooldown: 15s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Phantom:
     description:
-      - ""
-      - "&7Get the ability to fly for a limited time."
-      - ""
+      - ''
+      - '&7Get the ability to fly for a limited time.'
+      - ''
+    name: '&bPhantom'
+    display-item: FEATHER
+    credits: 3700
+    cooldown: 20s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Pro:
     description:
-      - ""
-      - "&7Made only for the best"
-      - "&7players out there, this"
-      - "&7kit features no enchantments."
-      - ""
+      - ''
+      - '&7Made only for the best'
+      - '&7players out there, this'
+      - '&7kit features no enchantments.'
+      - ''
+    name: '&aPro'
+    display-item: IRON_CHESTPLATE
+    credits: 0
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   PvP:
     description:
-      - ""
-      - "&7Basic PvP class."
-      - ""
+      - ''
+      - '&7Basic PvP class.'
+      - ''
+    name: '&aPvP'
+    display-item: DIAMOND_SWORD
+    credits: 0
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Quickdrop:
     description:
-      - ""
-      - "&7Automatically drops your bowls."
-      - ""
+      - ''
+      - '&7Automatically drops your bowls.'
+      - ''
+    name: '&bQuickdrop'
+    display-item: MUSHROOM_SOUP
+    credits: 3200
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Snail:
     description:
-      - ""
-      - "&7Have a 20% chance to slow down"
-      - "&7a person for 5 seconds."
-      - ""
+      - ''
+      - '&7Have a 20% chance to slow down'
+      - '&7a person for 5 seconds.'
+      - ''
+    name: '&dSnail'
+    display-item: ANVIL
+    credits: 5400
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Speed Monster:
     description:
-      - ""
-      - "&7Start with speed 1 and gain 1"
-      - "&7extra speed level from each kill."
-      - ""
+      - ''
+      - '&7Start with speed 1 and gain 1'
+      - '&7extra speed level from each kill.'
+      - ''
+    name: '&aSpeed Monster'
+    display-item: POTION
+    credits: 5100
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Spiderman:
     description:
-      - ""
-      - "&7Catch your enemies in a sticky web."
-      - ""
+      - ''
+      - '&7Catch your enemies in a sticky web.'
+      - ''
   Stomper:
     description:
-      - ""
-      - "&7Right-click an anvil to launch yourself into"
-      - "&7the air and then sneak to thrust yourself"
-      - "&7down, dealing massive damage to"
-      - "&7whoever is on the ground below you."
-      - ""
+      - ''
+      - '&7Right-click an anvil to launch yourself into'
+      - '&7the air and then sneak to thrust yourself'
+      - '&7down, dealing massive damage to'
+      - '&7whoever is on the ground below you.'
+      - ''
+    name: '&bStomper'
+    display-item: ANVIL
+    credits: 3000
+    cooldown: 20s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Strafe:
     description:
-      - ""
-      - "&7Has no special abilities,"
-      - "&7but is equipped with Speed III."
-      - ""
+      - ''
+      - '&7Has no special abilities,'
+      - '&7but is equipped with Speed III.'
+      - ''
+    name: '&5Strafe'
+    display-item: GOLD_BOOTS
+    credits: 3800
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Suicidal:
     description:
-      - ""
-      - "&7Causes an explosion that will kill you, but do"
-      - "&7massive amounts of damage to players around you."
-      - ""
+      - ''
+      - '&7Causes an explosion that will kill you, but do'
+      - '&7massive amounts of damage to players around you.'
+      - ''
+    name: '&cSuicidal'
+    display-item: TNT
+    credits: 3200
+    cooldown: ''
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Summoner:
     description:
-      - ""
-      - "&7Summon an iron golem that you ride,"
-      - "&7and it will attack the nearest enemy."
-      - ""
+      - ''
+      - '&7Summon an iron golem that you ride,'
+      - '&7and it will attack the nearest enemy.'
+      - ''
   Switcher:
     description:
-      - ""
-      - "&7Switch positions."
-      - ""
+      - ''
+      - '&7Switch positions.'
+      - ''
+    name: '&bSwitcher'
+    display-item: SNOW_BALL
+    credits: 1600
+    cooldown: 25s
+    effects: [ ]
+    armor: { }
+    inventory: { }
   Thor:
     description:
-      - ""
-      - "&7Use your axe to create a Lightning Strike."
-      - ""
+      - ''
+      - '&7Use your axe to create a Lightning Strike.'
+      - ''
+    name: '&cThor'
+    display-item: GOLD_AXE
+    credits: 3800
+    cooldown: 30s
+    effects: [ ]
+    armor:
+      boots: IRON_BOOTS
+      leggins: IRON_LEGGINGS
+      chestplate: IRON_CHESTPLATE
   Wither:
     description:
-      - ""
-      - "&7Surround your enemies with"
-      - "&7strong Wither Skeletons."
-      - ""
+      - ''
+      - '&7Surround your enemies with'
+      - '&7strong Wither Skeletons.'
+      - ''
   Zen:
     description:
-      - ""
-      - "&7Click to teleport to closest player."
-      - ""
-# The permission of a kit is soupland.kit.<kitname>
-# You can insert the field "name" or "cooldown" to override the default.
+      - ''
+      - '&7Click to teleport to closest player.'
+      - ''
+    name: '&9Zen'
+    display-item: SLIME_BALL
+    credits: 6000
+    cooldown: 25s
+    effects: [ ]
+    armor: { }
+    inventory: { }
